refactor(signly): 롬복 적용으로 보일러플레이트 제거